style: fix for blog detail title overflow problem

--- a/src/app/pages/client/blog-detail/blog-detail.component.scss
+++ b/src/app/pages/client/blog-detail/blog-detail.component.scss
@@ -4,7 +4,7 @@ header {
 
   .container {
     max-width: 90%;
-    height: 100px;
+    height: auto;
     margin-left: 40px;
     margin-right: auto;
     padding: 24px;
